fix: vertical align icons and graphQL icon grey color

--- a/app/styles/components/_info-tag.scss
+++ b/app/styles/components/_info-tag.scss
@@ -1,7 +1,7 @@
 .info-tag-container {
   margin-bottom: spacing(1);
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
 
   .icon-container {
